newsletter-sign-up-form/style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

:root {
  --color-primary: #ff6257;
  --color-primary-light: #ff625750;
  --color-pink: #ec7f88;
  --color-font-primary: hsl(235, 18%, 26%);
  --color-background: hsl(234, 29%, 20%);
  --color-gray: hsl(231, 7%, 60%);

  --gradient-primary: linear-gradient(130deg, #ff5078, #ed6d43);
}

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

body {
  box-sizing: border-box;
  font-family: 'Roboto', sans-serif;
  font-weight: 400;
  color: var(--color-font-primary);
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

main {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: var(--color-background);
  overflow: hidden;
}

h1 {
  font-size: 2.75rem;
}

.btn {
  display: block;
  background: hsl(234, 29%, 20%);
  border: none;
  color: #fff;
  font-weight: 700;
  font-size: 0.9rem;
  padding: 1rem;
  border-radius: 0.5rem;
  cursor: pointer;
  transition: 0.3s;
}

.btn:hover {
  background: var(--gradient-primary);
  box-shadow: var(--color-pink) 0px 10px 20px 0px;
  transform: translateY(-1px);
}

.btn:active {
  transform: translateY(1px);
  box-shadow: var(--color-pink) 0px 5px 15px 0px;
}

.container {
  background-color: white;
  border-radius: 2rem;
}

.sign-up {
  width: 900px;
  display: flex;
  gap: 2rem;
  padding: 1.5rem;
  position: absolute;
}

.sign-up--active {
  display: none;
  transform: scale(0);
}

.sign-up-bg {
  background-image: url(./images/illustration-sign-up-desktop.svg);
  background-size: cover;
  background-repeat: no-repeat;
  width: 100%;
  flex: 0 0 50%;
  overflow: hidden;
  border-radius: 1rem;
}

.sign-up-form {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  padding: 4rem 2rem;
}

.sign-up-form__feature {
  display: flex;
  align-items: center;
}

.sign-up-form__feature:not(:last-child) {
  margin-bottom: 0.65rem;
}

.sign-up-form__feature::before {
  display: block;
  content: url('./images/icon-list.svg');
  margin-right: 0.8rem;
}

.sign-up-form__email {
  display: flex;
  flex-direction: column;
}

.sign-up-form__email input {
  display: block;
  width: 100%;
  padding: 1rem 1.2rem;
  font-size: 0.9rem;
  border: 1px solid var(--color-gray);
  border-radius: 0.4rem;
  order: 1;
}

.sign-up-form__email-label {
  display: flex;
  justify-content: space-between;
  font-weight: bold;
  font-size: 0.8rem;
  margin-bottom: 0.5rem;
}

.sign-up-form__email-label--invalid {
  color: var(--color-primary);
  opacity: 0;
  transform: translateY(4px);
  transition: 0.2s;
}

.sign-up-form__email input:focus {
  border: 1px solid black;
  outline: none;
}

.sign-up-form__email input:not(:placeholder-shown):invalid {
  border-color: var(--color-primary);
  color: var(--color-primary);
  background-color: var(--color-primary-light);
}

.sign-up-form__email
  input:not(:placeholder-shown):invalid
  ~ .sign-up-form__email-label
  .sign-up-form__email-label--invalid {
  opacity: 1;
  transform: translateY(0);
}

.success {
  width: 450px;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 3rem;
  background-color: #fff;
  border-radius: 2rem;
  opacity: 0;
  transform: translateY(200px);
  transition: 0.5s;
  position: absolute;
  pointer-events: none;
}

.success--active {
  transform: translateY(0);
  display: flex;
  opacity: 1;
  pointer-events: all;
}

.success__icon {
  height: 3rem;
  width: 3rem;
}

.dismiss_btn {
  margin-top: 2rem;
}

@media only screen and (max-width: 900px) {
  main {
    background-color: white;
    justify-content: flex-start;
  }

  .container {
    width: 100vw;
    border-radius: 0;
    padding: 0;
  }

  .btn {
    padding: 1.25rem;
    font-size: 1rem;
    transition: none;
  }

  .btn:hover,
  .btn:active {
    background: var(--gradient-primary);
  }

  .sign-up {
    flex-direction: column;
    gap: 1rem;
    height: 100%;
  }

  .sign-up-form {
    height: 100%;
    padding: 2rem 1.5rem;
    order: 1;
    gap: 2rem;
    flex: 1;
  }

  .sign-up-bg {
    order: 0;
    background-size: cover;
    background-position: center center;
    border-radius: 0 0 1rem 1rem;
    flex: 0 0 30vh;
  }

  .sign-up-form__email {
    margin-top: 1rem;
  }

  .sign-up-form__email label {
    font-size: 0.9rem;
  }

  .sign-up-form__email input {
    padding: 1.25em;
    font-size: 1rem;
  }

  .sign-up-form__submit {
    margin-top: auto;
  }

  .success {
    height: 100vh;
    padding: 2.5rem 1.75rem;
    padding-top: 20vh;
    justify-items: center;
    transform: translateY(0) translateX(100%);
    position: static;
    justify-content: center;
    transition: 0.4s;
  }

  .success__icon {
    height: 4rem;
    width: 4rem;
  }

  .success--active {
    transform: translateY(0) translateX(0);
  }

  .dismiss_btn {
    margin-top: auto;
  }
}

